fixed scrollbar-bug

--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -7,7 +7,6 @@
   height: auto;
   background: rgb(255, 255, 255);
   z-index: 990;
-  overflow: hidden;
   transition: all 300ms ease-in-out;
 }
 .show-overlay.show-card-visible {
@@ -182,6 +181,7 @@
 
 @media (min-width: 1340px) {
   .show-overlay {
+    position: fixed;
     top: 319px;
     right: 0;
     left: calc(232px + 500px);
